--- a/filter-service/src/main/resources/application.yml
+++ b/filter-service/src/main/resources/application.yml
@@ -1,7 +1,31 @@
 spring:
+  application:
+    name: FILTER-SERVICE
   data:
     mongodb:
       database: turkcell-filterdb
       uri: mongodb://localhost:27017
       username: turkcell
       password: 12345
+  kafka:
+    consumer:
+      auto-offset-reset: earliest
+      bootstrap-servers: localhost:9092
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: "*"
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${instanceId:${random.value}}
+    prefer-ip-address: true
+server:
+  port: 0
