--- a/inventory-service/src/main/resources/application.yml
+++ b/inventory-service/src/main/resources/application.yml
@@ -1,15 +1,29 @@
 spring:
+  application:
+    name: INVENTORY-SERVICE
   datasource:
     username: postgres
-    url: jdbc:postgresql://localhost:5432/rentACar-inventoryDb
     password: '12345'
+    url: jdbc:postgresql://localhost:5432/rentACar-inventoryDb
   jpa:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-      javax:
-        persistence:
-          validation:
-            mode: none
     hibernate:
       ddl-auto: update
+  kafka:
+    producer:
+      bootstrap-servers: http://localhost:9092
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${instanceId:${random.value}}
+    prefer-ip-address: true
+server:
+  port: 0
