--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,18 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: "12345"
     volumes:
       - mongodb_data:/data/db
+  inventorydb:
+    container_name: turkcell-inventorydb-mysql
+    image: mysql
+    ports:
+      - "3307:3307"
+    environment:
+      - MYSQL_ROOT_PASSWORD=12345
+      - MYSQL_TCP_PORT=3307
+      - VIRTUAL_PORT=3307
+    volumes:
+      - inventorydb:/data/db
 volumes:
   kafka_data:
   mongodb_data:
+  inventorydb:
