--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,33 @@ services:
     command: start-dev
     volumes:
       - .:/opt/jboss/keycloak/imports
+  zipkin:
+    image: openzipkin/zipkin
+    container_name: zipkin
+    ports:
+      - "9411:9411"
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    networks:
+      - monitor-net
+  grafana:
+    image: grafana/grafana
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_USER=admin
+    volumes:
+      - grafana_data:/var/lib/grafana
+      - grafana_config:/etc/grafana
+    networks:
+      - monitor-net
   mongodb:
     container_name: turkcell-filterdb-mongodb
     image: mongo
@@ -48,6 +75,11 @@ services:
     volumes:
       - inventorydb:/data/db
 volumes:
+  grafana_data:
+  grafana_config:
   kafka_data:
   mongodb_data:
   inventorydb:
+networks:
+  monitor-net:
+    driver: bridge
